--- a/index.html
+++ b/index.html
@@ -10,15 +10,12 @@
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // MIT License
-      // https://github.com/rafgraph/spa-github-pages
+      // https://github.com/rifkydelta/nihonme
       (function(l) {
-        if (l.search[1] === '/' ) {
-          var decoded = l.search.slice(1).split('&').map(function(s) { 
-            return s.replace(/~and~/g, '&')
-          }).join('?');
-          window.history.replaceState(null, null,
-              '/nihonme/' + decoded + l.hash
-          );
+        var params = new URLSearchParams(l.search);
+        var path = params.get('p');
+        if (path) {
+          window.history.replaceState(null, null, '/nihonme/' + path + l.hash);
         }
       }(window.location))
     </script>
