--- a/404.html
+++ b/404.html
@@ -2,18 +2,21 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Page Not Found</title>
+    <title>Single Page Apps for GitHub Pages</title>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // MIT License
-      // https://github.com/rifkydelta/nihonme
-      var pathSegmentsToKeep = 2;
-
+      // https://github.com/rafgraph/spa-github-pages
+      // This script redirects to index.html, passing the original path, search, and hash.
+      // pathSegmentsToKeep = 1 for repo pages (e.g., username.github.io/repo-name/)
+      var pathSegmentsToKeep = 1; 
       var l = window.location;
-      var path = l.pathname.split('/').slice(pathSegmentsToKeep).join('/');
       l.replace(
         l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-        '/nihonme/?p=' + path + l.hash
+        l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
+        l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
+        (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
+        l.hash
       );
     </script>
   </head>
