--- a/404.html
+++ b/404.html
@@ -2,24 +2,26 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Single Page Apps for GitHub Pages</title>
+    <title>Redirecting...</title>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // MIT License
-      // https://github.com/rafgraph/spa-github-pages
-      // This script redirects to index.html, passing the original path, search, and hash.
-      // pathSegmentsToKeep = 1 for repo pages (e.g., username.github.io/repo-name/)
-      var pathSegmentsToKeep = 1; 
+      // https://github.com/rifkydelta/nihonme
+      var pathSegmentsToKeep = 1;
       var l = window.location;
+      var redirectPath = l.pathname.split('/').slice(pathSegmentsToKeep).join('/');
+      
+      // Store the current path in sessionStorage
+      sessionStorage.setItem('redirect', redirectPath);
+      
+      // Redirect to the base path
       l.replace(
         l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-        l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
-        l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
-        (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
-        l.hash
+        '/nihonme/'
       );
     </script>
   </head>
   <body>
+    <p>Redirecting...</p>
   </body>
 </html> 
