--- a/404.html
+++ b/404.html
@@ -2,20 +2,24 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Redirecting...</title>
+    <title>Single Page Apps for GitHub Pages</title>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // MIT License
       // https://github.com/rifkydelta/nihonme
+      var pathSegmentsToKeep = 1;
       var l = window.location;
-      var path = l.pathname.split('/').slice(2).join('/');
+      var path = l.pathname.split('/').slice(pathSegmentsToKeep).join('/');
+      
+      // Store the current path in sessionStorage before redirecting
+      sessionStorage.setItem('redirect', path);
+      
       l.replace(
         l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-        '/nihonme/?path=' + path + l.hash
+        '/nihonme/' + '?p=' + path + l.hash
       );
     </script>
   </head>
   <body>
-    <p>Redirecting...</p>
   </body>
 </html> 
