--- a/404.html
+++ b/404.html
@@ -1,25 +1,17 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Single Page Apps for GitHub Pages</title>
-    <script type="text/javascript">
-      // Single Page Apps for GitHub Pages
-      // MIT License
-      // https://github.com/rifkydelta/nihonme
-      var pathSegmentsToKeep = 1;
-      var l = window.location;
-      var path = l.pathname.split('/').slice(pathSegmentsToKeep).join('/');
-      
-      // Store the current path in sessionStorage before redirecting
-      sessionStorage.setItem('redirect', path);
-      
-      l.replace(
-        l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-        '/nihonme/' + '?p=' + path + l.hash
-      );
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Redirecting...</title>
+    <script>
+        // Save the full URL to sessionStorage
+        sessionStorage.setItem('redirect', window.location.href);
+        // Redirect to the root path
+        window.location.href = '/nihonme/';
     </script>
-  </head>
-  <body>
-  </body>
+</head>
+<body>
+    <p>Redirecting...</p>
+</body>
 </html> 
